--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -33,7 +33,7 @@
     </nav>
     <main>
         <section class="OneSec">
-            <div class="container">
+            <div class="container" id="desktop-types">
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
                         <h2 id="siteType">Типажи сайтов которые мы делаем</h2>
@@ -73,10 +73,54 @@
                         </div>
                     </div>
                 </div>
-            </div>
                 <div class="servButton">
                     <a id="noBorder" href="#"><h2>Наши услуги</h2></a>
                 </div>
+            </div>
+            <div class="container" id="mobile-types">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <h2 id="siteType-mobile">Типажи сайтов которые мы делаем</h2>
+                        <p id="subSiteType-mobile">А какой сайт нужен вам?</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <div class="mobileWrapper-1">
+                            <h3 id="wrapper-header">Лендинг страница</h3>
+                            <p id="wrapper-p">- одностраничный сайт отличается повышенной конверсией, меньшей информативностью по сравнению с другими сайтами</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <div class="mobileWrapper-2">
+                            <h3 id="wrapper-header">Сайт каталог</h3>
+                            <p id="wrapper-p">- идеальный тип сайта для отображения товаров или услуг методом каталога</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <div class="mobileWrapper-3">
+                            <h3 id="wrapper-header">Интернет магазин</h3>
+                            <p id="wrapper-p">- любимые всеми магазины, похожи на сайты каталоги, однако есть функция покупки</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <div class="mobileWrapper-4">
+                            <h3 id="wrapper-header">Информационный сайт</h3>
+                            <p id="wrapper-p">- сайт с повышенной информативностью, подходит для описания вашего проекта</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="servButtonMobile">
+                    <a id="noBorder" href="#"><h2>Наши услуги</h2></a>
+                </div>
+                <img src="/img/Elipse-mobile.png" alt="" id="mobile-line">
+            </div>
         </section>
 {#            <div class="container">#}
 {#                <div class="row">#}
@@ -270,15 +314,11 @@
                         </script>
                     </div>
                 </div>
-
-
                 {#<div class="row">#}
                     {#<div class="col-12 buttonInInfBlock">#}
                         {#<a href="#"><button>Читать Дальше</button></a>#}
                     {#</div>#}
                 {#</div>#}
-
-
             </div>
 
 
