--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -1,112 +1,120 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}AboutUs{% endblock %}
+{% block title %}О нас{% endblock %}
 
 {% block body %}
-
-
-    <nav class="serv">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 navB">
-                    <h1>Все наши услуги</h1>
-                    <p>что нужно для вашего бизнеса?</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="textWrapp">
+                    <h1>Страница находится в разробтке.</h1>
+                    <p>Cовсем скоро здесь можно будет подробнее узнать о наших услугах</p>
+                    <a href="/" class="homeButt">На главную</a>
                 </div>
-            </div>
-
-            <div class="row butPos">
-                <div class="col-lg-12 col-md-12 butInNav">
-                    <a id="noBorder" href="#"><p>Заказать Услугу</p></a>
+                <div class="sorryWrapp">
+                    <object type="image/svg+xml" data="/img/Sorry.svg" id='sorry' width="60%"></object>
                 </div>
             </div>
         </div>
+    </div>
 
-    </nav>
+{#    <nav class="serv">#}
+{#        <div class="container">#}
+{#            <div class="row">#}
+{#                <div class="col-lg-12 col-md-12 navB">#}
+{#                    <h1>Все наши услуги</h1>#}
+{#                    <p>что нужно для вашего бизнеса?</p>#}
+{#                </div>#}
+{#            </div>#}
 
+{#            <div class="row butPos">#}
+{#                <div class="col-lg-12 col-md-12 butInNav">#}
+{#                    <a id="noBorder" href="#"><p>Заказать Услугу</p></a>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
 
-
-
-    <main>
-
-        <section class="creatS">
-
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 creatInf">
-                        <h1>Создание сайтов</h1>
-                        <p>типы сайтов, какой именно нужен Вам?</p>
-                    </div>
-                </div>
-
-                <div class="row firstB">
-                    <div class="col-lg-2 col-md-2 creatF"><a id="noBorder" href="{{ path('landingPage') }}"><p>Лендинг Страница <i class="fas fa-arrow-right"></i></p></a></div>
-                    <div class="col-lg-2 col-md-2 creatF"><a id="noBorder" href="{{ path('cardSite') }}"><p>Сайт визитка <i class="fas fa-arrow-right"></i></p></a></div>
-                    <div class="col-lg-2 col-md-2 creatF"><a id="noBorder" href="{{ path('siteDirectory') }}"><p>Сайт каталог <i class="fas fa-arrow-right"></i></p></a></div>
-                    <div class="col-lg-2 col-md-2 creatF"><a id="noBorder" href="{{ path('business') }}"><p>Интернет магазин <i class="fas fa-arrow-right"></i></p></a></div>
-                </div>
-
-                <div class="row oneB">
-                    <div class="col-lg-2 col-md-2"><p>Лендинг страница - одностраничный сайт созданный для продажи товара/услуги</p></div>
-                    <div class="col-lg-2 col-md-2"><p>Сайт визитка - цель этих страниц предоставление информации о вашем товаре и услуги, бренда.</p></div>
-                    <div class="col-lg-2 col-md-2"><p>Сайт каталог - содержит большое количество товаров или услуг без корзины, однако с админ панелью</p></div>
-                    <div class="col-lg-2 col-md-2"><p>Интернет магазин - нацелен для продажи товара или услуги. Удобный функционал как для клиента как и для вас и ваших работников.</p></div>
-                </div>
-
-                <div class="row twoS">
-                    <div class="col-lg-12 col-md-12 twoB">
-                        <p>Не могу разобраться, заказать звонок</p>
-                    </div>
-                </div>
-
-            </div>
-
-        </section>
-
-
-
-        <section class="seoW">
-
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 seoInf">
-                        <h1>Давайте подберем комплексное Seo-продвижение</h1>
-                        <p>Чем вы занимаетесь в вашем деле?</p>
-                    </div>
-                </div>
-
-                <a class="desW" href="{{ path('designPage') }}"><button>Узнайте больше <i class="fas fa-arrow-right"></i></button></a>
-
-
-                </div>
-
-            </div>
-
-        </section>
-
-
-
-        <section class="designW">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 desB">
-                        <h1>Дизайн для вас</h1>
-                        <p>
-                            Давайте создадим удобный и красивый интерфейс для вашего проекта
-                        </p>
-                        <a href="{{ path('designPage') }}"><button>Узнать больше <i class="fas fa-arrow-right"></i></button></a>
-                    </div>
-                </div>
-
-            </div>
-
-        </section>
-
-
-
-    </main>
+{#    </nav>#}
 
 
 
 
+{#    <main>#}
 
+{#        <section class="creatS">#}
+
+{#            <div class="container">#}
+{#                <div class="row">#}
+{#                    <div class="col-lg-12 col-md-12 creatInf">#}
+{#                        <h1>Создание сайтов</h1>#}
+{#                        <p>типы сайтов, какой именно нужен Вам?</p>#}
+{#                    </div>#}
+{#                </div>#}
+
+{#                <div class="row firstB">#}
+{#                    <div class="col-lg-2 col-md-2 creatF"><a id="noBorder" href="{{ path('landingPage') }}"><p>Лендинг Страница <i class="fas fa-arrow-right"></i></p></a></div>#}
+{#                    <div class="col-lg-2 col-md-2 creatF"><a id="noBorder" href="{{ path('cardSite') }}"><p>Сайт визитка <i class="fas fa-arrow-right"></i></p></a></div>#}
+{#                    <div class="col-lg-2 col-md-2 creatF"><a id="noBorder" href="{{ path('siteDirectory') }}"><p>Сайт каталог <i class="fas fa-arrow-right"></i></p></a></div>#}
+{#                    <div class="col-lg-2 col-md-2 creatF"><a id="noBorder" href="{{ path('business') }}"><p>Интернет магазин <i class="fas fa-arrow-right"></i></p></a></div>#}
+{#                </div>#}
+
+{#                <div class="row oneB">#}
+{#                    <div class="col-lg-2 col-md-2"><p>Лендинг страница - одностраничный сайт созданный для продажи товара/услуги</p></div>#}
+{#                    <div class="col-lg-2 col-md-2"><p>Сайт визитка - цель этих страниц предоставление информации о вашем товаре и услуги, бренда.</p></div>#}
+{#                    <div class="col-lg-2 col-md-2"><p>Сайт каталог - содержит большое количество товаров или услуг без корзины, однако с админ панелью</p></div>#}
+{#                    <div class="col-lg-2 col-md-2"><p>Интернет магазин - нацелен для продажи товара или услуги. Удобный функционал как для клиента как и для вас и ваших работников.</p></div>#}
+{#                </div>#}
+
+{#                <div class="row twoS">#}
+{#                    <div class="col-lg-12 col-md-12 twoB">#}
+{#                        <p>Не могу разобраться, заказать звонок</p>#}
+{#                    </div>#}
+{#                </div>#}
+
+{#            </div>#}
+
+{#        </section>#}
+
+
+
+{#        <section class="seoW">#}
+
+{#            <div class="container">#}
+{#                <div class="row">#}
+{#                    <div class="col-lg-12 col-md-12 seoInf">#}
+{#                        <h1>Давайте подберем комплексное Seo-продвижение</h1>#}
+{#                        <p>Чем вы занимаетесь в вашем деле?</p>#}
+{#                    </div>#}
+{#                </div>#}
+
+{#                <a class="desW" href="{{ path('designPage') }}"><button>Узнайте больше <i class="fas fa-arrow-right"></i></button></a>#}
+
+
+{#                </div>#}
+
+{#            </div>#}
+
+{#        </section>#}
+
+
+
+{#        <section class="designW">#}
+{#            <div class="container">#}
+{#                <div class="row">#}
+{#                    <div class="col-lg-12 col-md-12 desB">#}
+{#                        <h1>Дизайн для вас</h1>#}
+{#                        <p>#}
+{#                            Давайте создадим удобный и красивый интерфейс для вашего проекта#}
+{#                        </p>#}
+{#                        <a href="{{ path('designPage') }}"><button>Узнать больше <i class="fas fa-arrow-right"></i></button></a>#}
+{#                    </div>#}
+{#                </div>#}
+
+{#            </div>#}
+
+{#        </section>#}
+
+
+
+{#    </main>#}
 {% endblock %}
