--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -2066,6 +2066,15 @@
 }
 
 @media only screen and ( max-width: 375px) and  ( max-height: 812px){
+
+    #octoImg{
+        height: 74.7%;
+        top: 34%;
+        left: 0;
+        position: absolute;
+        z-index: -1;
+        transform: rotate(90deg);
+    }
     .OneSec {
         height: 210vh;
     }
