--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -183,7 +183,7 @@
 {#            </div>#}
         <section class="TwoSec">
 
-            <h1>Этапы создания сайта</h1>
+            <h1 class="forMb">Этапы создания сайта</h1>
             <p>Что же мы пройдём, создавая ваш проект?</p>
 
 
@@ -251,7 +251,6 @@
 
 
             <div class="buttonBlock">
-
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 col-md-12 brifC">
@@ -269,12 +268,60 @@
                         </div>
                     </div>
                 </div>
-
             </div>
 
+            <div id="etaps-mobile">
+                <div class="container">
+                     <div class="row">
+                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <ul id="etaps-list">
+                                <li>
+                                    <h4>Старт</h4>
+                                    <p>
+                                    </p>
+                                </li>
+                                <li>
+                                    <h4>Создание семантического ядра</h4>
+                                    <p>
+                                        - после полного анализа рынка мы можем создать ядро
+                                    </p>
+                                </li>
+                                <li>
+                                    <h4>Написание текстов</h4>
+                                    <p>
+                                        - на основе ядра прописываться тексты сайта
+                                    </p>
+                                </li>
+                                <li>
+                                    <h4>Дизайн</h4>
+                                    <p>
+                                        - благодаря прописанным текстам и созданной структуре сайта ранее, делаем удобный и красивый дизайн вашего сайта
+                                    </p>
+                                </li>
+                                <li>
+                                    <h4>Верстка</h4>
+                                    <p>
+                                        - создание прототипа сайта
+                                    </p>
+                                </li>
+                                <li>
+                                    <h4>Оптимизация и доработка проекта</h4>
+                                    <p>
+                                        - доработка текстов, внешнего вида и сео-показателей
+                                    </p>
+                                </li>
+                                <li>
+                                    <h4>Сдача проекта вам</h4>
+                                    <p>
+                                    </p>
+                                </li>
+                            </ul>
+                         </div>
+                    </div>
+                </div>
+            </div>
 
         </section>
-
 
         <section class="ThereSec">
 
