--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -23,6 +23,7 @@
 }
 @media only screen and (min-width: 1920px) and (max-height: 1080px) {
 
+
     .op-gradient{
         -webkit-mask-image: -webkit-gradient(linear, left top, left bottom,
         from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
@@ -317,6 +318,12 @@
 
 @media only screen and (max-width: 1024px)  {
 
+    .textWrapp {
+        text-align: center;
+        text-decoration: none;
+        margin-top: 20%;
+    }
+
     .op-gradient{
         -webkit-mask-image: -webkit-gradient(linear, left top, left bottom,
         from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
@@ -610,15 +617,12 @@
         padding-bottom: 35px;
     }
 
-    .blockTwo img {
-        display: none;
-    }
 
-    .blockCol {
+   /* .blockCol {
         display: flex;
         flex-direction: column;
         text-align: center;
-    }
+    } */
 
     .blogTextInf  {
         line-height: inherit!important;
@@ -1154,15 +1158,11 @@
         padding-bottom: 35px;
     }
 
-    .blockTwo img {
-        display: none;
-    }
-
-    .blockCol {
+   /* .blockCol {
         display: flex;
         flex-direction: column;
         text-align: center;
-    }
+    } */
 
     .blogTextInf  {
         line-height: inherit!important;
@@ -1390,6 +1390,41 @@
 
 @media only screen and (max-width: 414px) and (max-width: 768px) {
 
+    .blockOne, .blockTwo, .blockThere {
+        display: none;
+    }
+    .forMb{
+        font-size: 150%;
+        font-weight: 600 !important;
+        text-align: left;
+        margin-left: 7%;
+    }
+
+    #etaps-list{
+        list-style-type: decimal;
+    }
+
+    #etaps-list li{
+        text-align: left;
+        margin-top: 9%;
+    }
+
+    #etaps-list li h4{
+        font-size: 100%;
+    }
+
+    #etaps-list li p{
+        text-align: left;
+        font-size: 13px !important;
+    }
+
+    .buttonBlock{
+        display: none;
+    }
+
+    #etaps-mobile{
+        display: block;
+    }
     .mobileWrapper-1{
         color: white;
         margin-top: 20%;
@@ -1715,11 +1750,11 @@
         display: none;
     }
 
-    .blockCol {
+    /*.blockCol {
         display: flex;
         flex-direction: column;
         text-align: center;
-    }
+    } */
 
     .blogTextInf  {
         line-height: inherit!important;
@@ -1979,6 +2014,43 @@
 
 }
 @media only screen and (max-width: 411px) {
+
+    .blockOne, .blockTwo, .blockThere {
+        display: none;
+    }
+    .forMb{
+        font-size: 150%;
+        font-weight: 600 !important;
+        text-align: left;
+        margin-left: 7%;
+    }
+
+    #etaps-list{
+        list-style-type: decimal;
+    }
+
+    #etaps-list li{
+        text-align: left;
+        margin-top: 9%;
+    }
+
+    #etaps-list li h4{
+        font-size: 100%;
+    }
+
+    #etaps-list li p{
+        text-align: left;
+        font-size: 13px !important;
+    }
+
+    .buttonBlock{
+        display: none;
+    }
+
+    #etaps-mobile{
+        display: block;
+    }
+
     #octoImg {
         height: 81.9%;
         top: 27.5%;
@@ -2067,6 +2139,42 @@
 
 @media only screen and ( max-width: 375px) and  ( max-height: 812px){
 
+    .blockOne, .blockTwo, .blockThere {
+        display: none;
+    }
+    .forMb{
+        font-size: 150%;
+        font-weight: 600 !important;
+        text-align: left;
+        margin-left: 7%;
+    }
+
+    #etaps-list{
+        list-style-type: decimal;
+    }
+
+    #etaps-list li{
+        text-align: left;
+        margin-top: 9%;
+    }
+
+    #etaps-list li h4{
+        font-size: 100%;
+    }
+
+    #etaps-list li p{
+        text-align: left;
+        font-size: 13px !important;
+    }
+
+    .buttonBlock{
+        display: none;
+    }
+
+    #etaps-mobile{
+        display: block;
+    }
+
     #octoImg{
         height: 74.7%;
         top: 34%;
@@ -2142,6 +2250,41 @@
 }
 
     @media only screen and (max-width: 375px) and (max-height: 667px){
+        .blockOne, .blockTwo, .blockThere {
+            display: none;
+        }
+        .forMb{
+            font-size: 150%;
+            font-weight: 600 !important;
+            text-align: left;
+            margin-left: 7%;
+        }
+
+        #etaps-list{
+            list-style-type: decimal;
+        }
+
+        #etaps-list li{
+            text-align: left;
+            margin-top: 9%;
+        }
+
+        #etaps-list li h4{
+            font-size: 100%;
+        }
+
+        #etaps-list li p{
+            text-align: left;
+            font-size: 13px !important;
+        }
+
+        .buttonBlock{
+            display: none;
+        }
+
+        #etaps-mobile{
+            display: block;
+        }
 
         .OneSec {
             height: 210vh;
@@ -2739,6 +2882,42 @@
 
     }
     @media only screen and (max-width: 360px) {
+        .blockOne, .blockTwo, .blockThere {
+            display: none;
+        }
+        .forMb{
+            font-size: 150%;
+            font-weight: 600 !important;
+            text-align: left;
+            margin-left: 7%;
+        }
+
+        #etaps-list{
+            list-style-type: decimal;
+        }
+
+        #etaps-list li{
+            text-align: left;
+            margin-top: 9%;
+        }
+
+        #etaps-list li h4{
+            font-size: 100%;
+        }
+
+        #etaps-list li p{
+            text-align: left;
+            font-size: 13px !important;
+        }
+
+        .buttonBlock{
+            display: none;
+        }
+
+        #etaps-mobile{
+            display: block;
+        }
+
         #octoImg {
             height: 71.5%;
             top: 37%;
@@ -2829,6 +3008,48 @@
             color: lightgray; }
     }
     @media only screen and (max-width: 320px) {
+
+        .blockOne, .blockTwo, .blockThere {
+            display: none;
+        }
+        .forMb{
+            font-size: 150%;
+            font-weight: 600 !important;
+            text-align: left;
+            margin-left: 7%;
+        }
+
+        #etaps-list{
+            list-style-type: decimal;
+        }
+
+        #etaps-list li{
+            text-align: left;
+            margin-top: 9%;
+        }
+
+        #etaps-list li h4{
+            font-size: 100%;
+        }
+
+        #etaps-list li p{
+            text-align: left;
+            font-size: 13px !important;
+        }
+
+        .buttonBlock{
+            display: none;
+        }
+
+        #etaps-mobile{
+            display: block;
+        }
+
+        #footer {
+            width: 100%;
+            height: 10vh;
+            margin-top: 15px;
+        }
 
         #octoImg {
             height: 71.5%;
