--- a/public/Blog/blog.css
+++ b/public/Blog/blog.css
@@ -81,10 +81,12 @@ body {
   height: 200px; }
 
 .infOneObj h1 {
-  padding: 70px 70px 5px 40px; }
+  /*padding: 70px 70px 5px 40px;*/
+  margin-top: 5%;
+}
 .infOneObj p {
   color: #979797;
-  padding: 0 70px; }
+  /*padding: 0 70px; */}
 
 .infTwoObj {
   display: flex;
