add smooth scrolling

--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -14,7 +14,7 @@
                             <a href="/"><img id="imgInHL" src="/img/OctoLogo.svg" alt="logo" /></a>
                         </li>
                         <li><a href="{{ path('blog') }}">Блог</a></li>
-                        <li><a id="bacRed" href="#form">Остались вопросы?</a></li>
+                        <li><a id="bacRed">Остались вопросы?</a></li>
                     </ul>
                 </div>
             </div>
