--- a/public/style/style.css
+++ b/public/style/style.css
@@ -35,7 +35,9 @@ body {
       body .headerB li #bacRed {
         background-color: red;
         color: white;
-        padding: 7px 7px; }
+        padding: 7px 7px;
+        cursor: pointer;
+      }
       body .headerB li #bacRed:hover{
         background-color: #e74c3c;
       }
@@ -250,6 +252,7 @@ body {
   -webkit-box-shadow: 0 0 4px 4px rgba(255,255,255,0.7);
   -moz-box-shadow: 0 0 4px 4px rgba(255,255,255,0.7);
   box-shadow: 0 0 4px 4px rgba(255,255,255,0.7);
+  cursor: pointer;
 
 }
 
