--- a/templates/_adaptiveMenu.html.twig
+++ b/templates/_adaptiveMenu.html.twig
@@ -19,7 +19,7 @@
                     <a class="nav__item" href="{{ path('home') }}">Главная</a>
                     <a class="nav__item" href="{{ path('services') }}"><span>Услуги</span></a>
                     <a class="nav__item" href="{{ path('blog') }}">Блог</a>
-                    <a class="nav__item" href="#form"><span>Контакты</span></a>
+                    <a class="nav__item" href="#form" onclick="document.getElementById('burger').checked = false"><span>Контакты</span></a>
                 </nav>
             </div>
         </div>
