--- a/public/Blog/articleCSS/style.css
+++ b/public/Blog/articleCSS/style.css
@@ -3,6 +3,22 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  padding: 100px 0; }
+  margin-top: 5%;
+  padding: 10% }
+#imgBgrd{
+  background-color: #bfbfbf;
+}
+.bgArticle{
+  background-color: lightgray;
+  border-radius: 10px;
+}
+#bgArtBody{
+  background-color: #bfbfbf;
+  padding-bottom: 2%;
+  margin-bottom: 1%;
+}
+.artAlgn{
+  text-align: justify;
+}
 
 /*# sourceMappingURL=style.css.map */
