--- a/public/errors/errors.css
+++ b/public/errors/errors.css
@@ -1,8 +1,13 @@
 body { background-color: #fff; color: #222; font: 16px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; margin: 0; }
 .Err { margin: 30px; max-width: 600px; text-align: center;}
-.Mess { color: #dc3545; font-size: 24px; }
+.Mess { color: #dc3545; }
 .MessServ { font-size: 18px; }
 
+.errorB{
+    margin-top: 10%;
+    text-align: center;
+    margin-bottom: 21%;
+}
 .MpB {
     height: 53px;
     width: 110px;
