--- a/templates/pages/articlePage.html.twig
+++ b/templates/pages/articlePage.html.twig
@@ -3,10 +3,7 @@
 {% block title %}{{ articles.slug.title }}{% endblock %}
 
 {% block body %}
-
-
-    <nav>
-
+    <nav id="imgBgrd">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 articleOn">
@@ -14,25 +11,18 @@
                 </div>
             </div>
         </div>
-
     </nav>
-
-
-
     <section>
-        <article>
-            <div class="container">
+        <article id="bgArtBody">
+            <div class="container bgArticle">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 headT">
                         <h1>{{ articles.title }}</h1>
-
                         <p><i id="clockInBlog" class="far fa-clock">{{ articles.CreatedAt|date('Y-m-d') }}</i></p>
-
                     </div>
                 </div>
-
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 articleTwo">
+                    <div class="col-lg-12 col-md-12 artAlgn">
                         <p>{{ articles.text|raw }}</p>
                     </div>
                 </div>
